<resources>
    <string name="app_name">Bunq Payment App</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logo">logo</string>
    <string name="initializing">Initializing…</string>
    <string name="payment_amount">%1$s %2$s</string>
    <string name="make_payment">Make Payment</string>
    <string name="payments">Payments</string>
    <string name="receiver_e_mail_address">E-mail</string>
    <string name="euro_symbol">€</string>
    <string name="payment_amount_hint">Amount</string>
    <string name="submit_payment">Submit Payment</string>
    <string name="payment_description">Description</string>
    <string name="invalid_amount_warning">Invalid amount</string>
    <string name="empty_amount_warning">Amount cannot be empty</string>
    <string name="empty_email_warning">Email cannot be empty</string>
    <string name="empty_description_warning">Description cannot be empty</string>
    <string name="payment_processing">Processing…</string>
    <string name="payment_result">payment result</string>
    <string name="try_again">Try Again</string>
    <string name="payment_successful">Payment Successful!</string>
    <string name="payment_error">An error occurred during the payment process</string>
    <string name="cool">Cool!</string>
    <string name="details">Details</string>
    <string name="type">Type</string>
    <string name="sub_type">Sub-Type</string>
    <string name="payment_details">Payment Details</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="network_error">Network Error</string>
    <string name="network_alert_dialog_message">Check your internet connection and try again</string>
</resources>